crates/adapters/midnight-da/src/snapshots/sov_midnight_da__config__tests__periodic_block_producing.snap
---
source: crates/adapters/midnight-da/src/config.rs
assertion_line: 338
expression: config
---
{
  "connection_string": "sqlite:///tmp/mockda.sqlite?mode=rwc",
  "sender_address": "0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f",
  "finalization_blocks": 5,
  "block_producing": {
    "periodic": {
      "block_time_ms": 1000
    }
  },
  "randomization": null,
  "save_incoming_worker_txs": "none",
  "worker_tx_path": null,
  "worker_tx_bucket": null
}
